# midgard

./: .gitignore  .gitmodules  Cargo.toml  README.md  preview.sh  readme.md
.cargo/: config.toml
examples/: demo.rs  example.rs  preview.rs
src/: generator.rs  lib.rs  main.rs  world_generator.rs  world_visualizer.rs
src/generator/: fall_off_noise_function.rs
src/world_generator/: isize_index_matrix.rs  multi_octave_noise.rs  parameters.rs  params.rs  performance_profiler.rs  performance_telemetry.rs  vector_math.rs
