[package]
name = "midgard"
version = "0.1.0"
edition = "2021"

[dependencies]
robotics_lib = { path="src/Robotic-Lib" }
bevy = { version = "0.12", default_features = false }
bevy_pixels = "0.12"
noise = "0.8.2"
rand = "0.8.5"
fast_poisson = "1.0.0"
time = "0.3.30"
num-traits = "0.2.17"

[[example]]
name = "example"