[package]
name = "midgard"
version = "0.1.0"
edition = "2021"
authors = ["Enrico Dalla Croce (Kalsifer-742)", "Matteo Possami (circled-square)"]
publish = ["kellnr"]
description = "Highly configurable & blazing fast World Generator. Features include: biomes, world renderer, seed based reproducible randomness, rivers & streets. It allows users to tweak generation stages through simple parameters. Fully documented with rustdoc."
readme = "README.md"
repository = "https://github.com/circled-square/midgard.git"

[dependencies]
robotics_lib = { version = "0.1.21", registry = "kellnr"}
bevy = { version = "0.12", default_features = false }
bevy_pixels = "0.12"
noise = "0.8.2"
rand = "0.8.5"
fast_poisson = "1.0.0"
time = "0.3.30"
num-traits = "0.2.17"
embed-doc-image = "0.1.4"
rayon = "*"

[[example]]
name = "example"

[[example]]
name = "preview"