[package]
name = "midgard"
version = "0.2.1"
edition = "2021"
authors = ["Enrico Dalla Croce (Kalsifer-742)", "Matteo Possami (circled-square)"]
description = "Highly configurable & blazing fast World Generator. Features include: biomes, world renderer, seed based reproducible randomness, rivers & streets. It allows users to tweak generation stages through simple parameters. Fully documented with rustdoc."
readme = "README.md"
repository = "https://github.com/circled-square/midgard.git"
publish = ["kellnr"]

[dependencies]
robotics_lib = { version = "0.1.21", registry = "kellnr" }

bevy = { version = "0.12.1", default_features = false, optional = true }
bevy_pixels = { version = "0.12.0", optional = true }
noise = "0.8.2"
rand = "0.8.5"
fast_poisson = "1.0.0"
time = "0.3.34"
num-traits = "0.2.18"
embed-doc-image = "0.1.4"
rayon = "1.8.1"

# Enable high optimizations for dependencies:
[profile.dev.package."*"]
opt-level = 3

[profile.dev.package."robotics_lib"]
opt-level = 0

[features]
visualizer = ["dep:bevy", "dep:bevy_pixels"]

[[example]]
name = "example"
required-features = ["visualizer"]

[[example]]
name = "preview"
required-features = ["visualizer"]
